# calory_counter

./: CMakeLists.txt
app/: CMakeLists.txt  Widget.cc  Widget.h  main.cc  widget.ui
src/lib/: CMakeLists.txt  People.cc  People.h  Person.cc  Person.h
